--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -3,16 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@casl/ability": "^6.3.3",
+    "@casl/react": "^3.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-intl": "^6.3.2",
     "react-loading-skeleton": "^3.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "swr": "^2.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
